# torch-cpp-examples

01_hello_torch/: CMakeLists.txt  main.cpp
02_linear_regression/: CMakeLists.txt  linear_regression.cpp
